Fix contraste couleurs

--- a/style/css/app.css
+++ b/style/css/app.css
@@ -3,23 +3,8 @@ body {
     padding: 0;
     font-family: 'Source Sans Pro';
     padding-top: 80px;
-    
-}
-
-body:before {
-    content: "";
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%; width: 100%;
-    -webkit-filter: blur(10px);
-    filter: blur(10px);
-    z-index: -1;
-    background: url(../img/background.jpg);
-    background-size: cover;
+    background: url(../img/background.png);
     background-attachment: fixed;
-    transform: scale(1.3);
-    transform-origin: center center;
 }
 
 .container {
@@ -705,7 +690,7 @@ body:before {
     font-size: 0.875em;
     padding-top: 1rem;
     padding-bottom: 1rem;
-    background-image: linear-gradient(to right, rgba(165, 165, 165, 0), rgba(165, 165, 165, 0), rgba(165, 165, 165, 0), rgba(108, 108, 108, 0.57));
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.20), rgba(255, 255, 255, 0.36))
 }
 
 .news-author {
